--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=0.5, user-scalable=no" />
+    <meta name="referrer" content="no-referrer-when-downgrade" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>管理系统</title>
   </head>
